Add content for macaroni and create new recipe pages

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -7,5 +7,36 @@
 </head>
 <body>
     <h1>Macaroni and Cheese</h1>
+    <img src="../images/macaroni.jpg" alt="Macaroni and Cheese">
+    
+    <h2>Description</h2>
+    <p>This succulent, cheesy, delicious macaroni and cheese is perfect for any occasion or gathering.</p>
+    <p>With only a few ingredients and some of your favorite cheeses, you can craft a meal that all your friends
+        and family will enjoy.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cans of evaporated whole milk</li>
+        <li>2 eggs, beaten</li>
+        <li>2 sticks of salted or unsalted butter</li>
+        <li>12 - 16 oz. of macaroni elbows</li>
+        <li>1 bag of shredded mild cheddar cheese</li>
+        <li>1 bag of shredded mozzarella cheese</li>
+        <li>2 - 3 bags of whatever other cheese you like</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil your macaroni elbows until tender then drain</li>
+        <li>Add butter to macaroni and stir</li>
+        <li>Add 1/2 of all your cheese to macaroni, stir</li>
+        <li>Add 1 can of evaporated milk, stir</li>
+        <li>Add remaining cheese, stir</li>
+        <li>Add other can of evaporated milk, stir</li>
+        <li>Add both beaten eggs, stir</li>
+        <li>When combined, spray baking pan with PAM and add mixture to it</li>
+        <li>Bake for approx. 45 minutes to 1 hour at 375 degrees</li>
+    </ol>
 </body>
 </html>
