--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/macaroni.html">Macaroni and Cheese</a></li>
             <li><a href="./recipes/ribeye.html">Ribeye Steak</a></li>
+            <li><a href="./recipes/chicken.html">Grilled Chicken Thighs</a></li>
         </ul>
     </body>
 </html>
