--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Grilled Chicken Thighs</h1>
-    <img src="../images/chicken.jpg" alt="Grilled Chicken Thighs">
+    <img src="../images/chicken.jpg" alt="Grilled Chicken Thighs" height="400" width="400">
     
     <h2>Description</h2>
     <p>Everybody loves chicken. But not everybody knows how to prepare chicken.</p>
