--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Macaroni and Cheese</h1>
-    <img src="../images/macaroni.jpg" alt="Macaroni and Cheese">
+    <img src="../images/macaroni.jpg" alt="Macaroni and Cheese" height="400" width="400">
     
     <h2>Description</h2>
     <p>This succulent, cheesy, delicious macaroni and cheese is perfect for any occasion or gathering.</p>
