--- a/recipes/ribeye.html
+++ b/recipes/ribeye.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ribeye Steak</h1>
-    <img src="../images/ribeye.jpg" alt="Ribeye Steak">
+    <img src="../images/ribeye.jpg" alt="Ribeye Steak" height="400" width="400">
     
     <h2>Description</h2>
     <p>Steak is very easy to overcook. Fortunately, it's also very easy to make juicy and delicious.</p>
