Add links to return home for each recipe

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -38,5 +38,7 @@
         <li>When combined, spray baking pan with PAM and add mixture to it</li>
         <li>Bake for approx. 45 minutes to 1 hour at 375 degrees</li>
     </ol>
+
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
