--- a/recipes/ribeye.html
+++ b/recipes/ribeye.html
@@ -32,5 +32,7 @@
         <li>Turn steak horizonally and grill for 90 seconds</li>
         <li>Remove steak from heat, lightly butter the top and let it rest for 5 - 10 minutes</li>
     </ol>
+
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
