--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -34,5 +34,7 @@
         <li>Grill chicken for 6 to 8 minutes</li>
         <li>Flip and grill for another 6 to 8 minutes or until 165 degrees internal temp</li>
     </ol>
+
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
