--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <title>Odin Recipes</title>
+        <title>Jordan's Recipes</title>
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+    <body class="home-body">
+        <h1 class="home-title">Jordan's Recipes</h1>
+        <ul class="recipe-links">
             <li><a href="./recipes/macaroni.html">Macaroni and Cheese</a></li>
             <li><a href="./recipes/ribeye.html">Ribeye Steak</a></li>
             <li><a href="./recipes/chicken.html">Grilled Chicken Thighs</a></li>
